test/tests/errors/error-class-no-rec-proc.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        rec proc x() {

        }
    }
}